--- a/transitdata/templates/layout.html
+++ b/transitdata/templates/layout.html
@@ -41,6 +41,9 @@
         <main role="main" class="container">
             <div class="row">
                 <div class="col-md-8">
+                    <form action="/home" method="POST">
+                        <button type="submit"  name="insert_button" class="btn btn-outline-info">Insert Data</button>
+                    </form>
                     {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
                     {% for category, message in messages %}
@@ -50,6 +53,7 @@
                     {% endfor %}
                     {% endif %}
                     {% endwith %}
+
                     {% block content %}{% endblock %}
                 </div>
             </div>
