feat: Add message flashing and logging

--- a/transitdata/templates/home.html
+++ b/transitdata/templates/home.html
@@ -6,4 +6,15 @@
         <p class="article-content">Press the above button to insert data into CrateDB. </p>
     </div>
 </article>
+<div>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+</div>
 {% endblock content %}
