chore: Add Docker and compose file

--- a/transitdata/templates/success.html
+++ b/transitdata/templates/success.html
@@ -25,7 +25,7 @@
     {% else %}
     <article class="media content-section">
         <div class="media-body">
-            <h2>Nothing to show, my friend. Update the page after the upload is finished.</h2>
+            <h2>Nothing to show. Update the page after the upload has finished.</h2>
             <p class="article-content">
                 A human who is a master of patience is master of everything else.</p>
         </div>
